# animexbe

./: .env  BOOKMARK_API_GUIDE.md  Dockerfile  docker-compose.yaml  exceptions.py  pyproject.toml  requirements-pretty.txt
api/: app.py  config.py
api/depends/: admin.py  user.py
api/routers/: admin.py  user.py
core/: db.py
facades/: admin.py  users.py
helpers/: authentication.py  general.py  token_maker.py
migrations/: create_admin.py  create_table.py
models/: admin.py  animes.py  bookmarks.py  crawler.py  crawler_settings.py  settings.py  users.py
schemas/: admin.py  users.py
scripts/: oploverz.py  otakudesu.py
services/: admin.py  users.py
