[project]
name = "film"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "environ (>=1.0,<2.0)",
    "environ-config (==23.2.0)",
    "python-dotenv (==1.0.1)",
    "passlib (==1.7.4)",
    "python-jose (==3.3.0)",
    "asyncpg (==0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (==4.1.1)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
